update the player

--- a/src/assets/css/components/trim-bar.css
+++ b/src/assets/css/components/trim-bar.css
@@ -47,7 +47,7 @@
 
   background-color: #F7CD50;
   padding: 2px 4px;
-  color: white;
+  color: black;
   font-family: "Assistant", sans-serif;
   text-align: center;
   border-radius: 6px;
